test/ill-formed/multi-file/cycle/helper.py
from main import y
x = y + 1
